# PortLBM

./: .clang-format  .cmake-format.yaml  .gitignore  CMakeLists.txt  LICENSE  README.md  clang-format.patch  cmake-format.patch  install_adaptivecpp.sh  linear_gpu_boundaries.hpp  main_benchmark.cpp  main_global.cpp  main_gpu.cpp
.github/workflows/: build.yml  lint.yml
cmake/: PortLBMConfig.cmake.in
include/: CMakeLists.txt  access.hpp  boundaries.hpp  defines.hpp  gpu_two_lattice.hpp  lbm_execution.hpp  simulation.hpp  utils.hpp
include/lbm/: portlbm.hpp  portlbm_factory.hpp  version.hpp.in
include/lbm/benchmark/: benchmark.hpp
include/lbm/console/: console_output.hpp
include/lbm/core/: access.hpp  boundaries.hpp  collision.hpp  constants.hpp  defines.hpp  domain.hpp  domain_initialization.hpp  macroscopic.hpp  properties.hpp  simulation.hpp  timer.hpp
include/lbm/exceptions/: exceptions.hpp
include/lbm/execution/: algorithm.hpp  algorithm_handler.hpp  lbm_executor.hpp  lbm_sycl_executor.hpp  sycl_algorithm.hpp  sycl_algorithm_handler.hpp  sycl_executor.hpp
include/lbm/file_interaction/: file_interaction.hpp
include/lbm/gpu/: sycl_constants.hpp
include/lbm/gpu/boundaries/linear/: linear_gpu_boundaries.hpp
include/lbm/gpu/general/: buffered.hpp  non_buffered.hpp
include/lbm/gpu/lptl/: lptl.hpp  lptl_kernels.hpp
include/lbm/gpu/npol/: npol.hpp  npol_kernels.hpp
include/lbm/gpu/nptl/: nptl.hpp  nptl_kernels.hpp
include/lbm/gpu/nsol/: nsol.hpp  nsol_kernels.hpp
include/lbm/gpu/swap/: gpu_swap.hpp  swap_kernels.hpp
include/lbm/gpu/two_lattice/: gpu_two_lattice.hpp
include/lbm/gpu/two_lattice/buffered/: buffered_gpu_two_lattice.hpp  buffered_two_lattice_kernels.hpp
include/lbm/gpu/two_lattice/linear/: linear_gpu_two_lattice.hpp  linear_two_lattice_kernels.hpp  usm_linear_gpu_two_lattice.hpp  usm_linear_two_lattice_kernels.hpp
include/lbm/gpu/two_lattice/non-linear/: non_linear_gpu_two_lattice.hpp  non_linear_two_lattice_kernels.hpp
include/lbm/gpu/two_lattice/optimized/: optimized_gpu_two_lattice.hpp  optimized_two_lattice_kernels.hpp
include/lbm/gui/: executor.hpp  gui_constants.hpp  hpx_executor.hpp  lbm_gui.hpp  simple_timer.hpp
settings/: benchmark.json  domain.json  settings.json
src/: CMakeLists.txt  access.cpp  boundaries.cpp  lbm_execution.cpp  main_gpu.cpp  simulation.cpp
src/lbm/: portlbm_factory.cpp
src/lbm/benchmark/: benchmark.cpp
src/lbm/console/: console_output.cpp
src/lbm/core/: access.cpp  simulation.cpp  timer.cpp
src/lbm/exceptions/: exceptions.cpp
src/lbm/execution/: algorithm.cpp  lbm_sycl_executor.cpp  sycl_executor.cpp
src/lbm/file_interaction/: file_interaction.cpp
src/lbm/gui/: hpx_executor.cpp  lbm_gui.cpp  simple_timer.cpp
tests/: CMakeLists.txt  smoke_test.cpp  test_access.cpp  test_domain.cpp  test_properties.cpp  test_regression.cpp
visualization/: evaluate_benchmark.py
z_quarantine/: file_interaction.cpp  macroscopic.cpp  main_benchmark.cpp  main_global.cpp  old_file_interaction.hpp  parallel_two_lattice.hpp  sequential_two_lattice.hpp  utils.hpp
